# sns-solution

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  logging_config.py  main.py
backend/app/api/: websocket.py
backend/app/integrations/: resilience.py
backend/app/middleware/: audit_middleware.py  cors.py  error_handler.py  logging_middleware.py  metrics.py  rate_limiter.py
backend/app/models/: __init__.py  analytics.py  audit_log.py  base.py  client.py  comment.py  content.py  content_approval.py  faq_guideline.py  filter_rule.py  notification.py  platform_account.py  publishing_log.py  user.py  user_client_assignment.py  vector_embedding.py
backend/app/repositories/: analytics_repository.py  client_repository.py  comment_repository.py  content_repository.py  notification_repository.py  user_repository.py
backend/app/schemas/: ai_tools.py  analytics.py  auth.py  client.py  comment.py  common.py  content.py  notification.py  publishing.py  user.py
backend/app/services/: ai_service.py  (+8 more)
backend/scripts/: register_instagram_token.py  seed_test_data.py
backend/tests/: conftest.py  test_ai.py  test_analytics.py  test_auth.py  test_celery_tasks.py  test_clients.py  test_community.py  test_config.py  test_contents.py  test_e2e.py  test_health.py  test_integrations.py  test_models.py  test_notifications.py  test_performance_security.py  test_phase6.py  test_publishing.py  test_schemas.py  test_settings.py  test_users.py  test_websocket.py  test_workflow.py
(+134 files in other folders)
